--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -1,6 +1,9 @@
 # https://blog.mismithportfolio.com/web/netlify-cms
 backend:
-  name: git-gateway
+  # name: git-gateway
+  name: github
+  repo: hkanako/netlify-cms-hugo
+  branch: master
 
 media_folder: "static/images/uploads"
 public_folder: "/images/uploads"
