--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -1,8 +1,8 @@
 # https://blog.mismithportfolio.com/web/netlify-cms
 backend:
-  # name: git-gateway
-  name: github
-  repo: hkanako/netlify-cms-hugo
+  name: git-gateway
+  # name: github
+  # repo: hkanako/netlify-cms-hugo
   branch: master
 
 media_folder: "static/images/uploads"
