--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -14,7 +14,10 @@ publish_mode: editorial_workflow
 collections:
   - name: "post"
     label: "Post"
-    folder: "content/posts"
+    folder: "content/post"
+    filter:
+      field: language
+      value: ja
     create: true
     slug: "{{slug}}"
     fields:
@@ -22,6 +25,4 @@ collections:
       - {label: "Descreption", name: "description", widget: "text"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
-      - {label: "Category", name: "categories", widget: "list", required: false}
-      - {label: "Tags", name: "tags", widget: "list", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
