--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -6,7 +6,7 @@ backend:
   branch: master
 
 media_folder: "static/images/uploads"
-public_folder: "/images/uploads"
+public_folder: "static/images/uploads"
 
 # This line should *not* be indented
 publish_mode: editorial_workflow
