--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -5,8 +5,8 @@ backend:
   # repo: hkanako/netlify-cms-hugo
   branch: master
 
-media_folder: "site/static/images/uploads"
-public_folder: "images/uploads"
+media_folder: "static/images/uploads"
+public_folder: "/images/uploads"
 
 # This line should *not* be indented
 publish_mode: editorial_workflow
