--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -5,7 +5,7 @@ backend:
   # repo: hkanako/netlify-cms-hugo
   branch: master
 
-media_folder: "static/images/uploads"
+media_folder: "site/static/images/uploads"
 public_folder: "/images/uploads"
 
 # This line should *not* be indented
